fixed scaling on mobile

--- a/project/projects.css
+++ b/project/projects.css
@@ -122,9 +122,14 @@ body {
 *{
     margin: 0;
     padding: 0;
+    transform: none;
+    transition: none;
 }
     .ProjCard{
         transform: scale(.5);
+    }
+    .ProjCard:hover{
+        transform:scale(.70)
     }
     #card1{ 
         left:40%;
